--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
         }
       }
       changeColor()
-      setTimeout(function () {
-        window.location.reload();
-      }, 15000);
+     setInterval(() => {
+      changeColor()
+    }, 15000);
     </script>
   </body>
 </html>
