Update index.html v3

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     </style>
   </head>
   <body>
+    <h1>
+      Call the color name not text
+    </h1>
     <div id="board-parent">
       <p>YELLOW</p>
       <p>BLACK</p>
