Update index.html v-4

--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <title>Document</title>
     <style>
       body {
-        justify-content: center;
+        justify-content: start;
         display: flex;
         align-items: center;
+      
         height: 100vh;
         width: 100vw;
         flex-direction: column;
+        text-align: center;
+        overflow: hidden;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+
       }
       #board-parent {
         display: flex;
@@ -29,7 +34,7 @@
     </style>
   </head>
   <body>
-    <h1>
+    <h1 style="font-weight: bolder; color: blueviolet;">
       Call the color name not text
     </h1>
     <div id="board-parent">
