--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
         margin: 0;
         font-weight: bolder;
         font-size: large;
+        text-align: center;
       }
     </style>
   </head>
