--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         padding: 0.5rem;
         margin: 0;
         font-weight: bolder;
-        font-size: large;
+        font-size: 1.5rem;
         text-align: center;
       }
     </style>
